@@ -7,7 +7,9 @@ function setUserPwd() {
 	if (oldUserPwd != null && oldUserPwd["user"] != null && oldUserPwd["user"] != "") {
 		removeUser(oldUserPwd["user"]);
 	}
-	addUser(username, password);
+	if(password != "") {
+		addUser(username, password);
+	}
 }
 
 function onLoad() {
@@ -21,28 +23,65 @@ function onLoad() {
 }
 
 function addUser(username, password) {
-	var passwordManager = Components.classes["@mozilla.org/passwordmanager;1"].createInstance();
-	if (passwordManager) {
-		passwordManager = passwordManager.QueryInterface(Components.interfaces.nsIPasswordManager);
-			
-		try{
-		  passwordManager.addUser("chrome://yacybar/", username, password);
-		} catch (e) { 
-			alert(e);
+	if ("@mozilla.org/passwordmanager;1" in Components.classes) {
+		// Password Manager exists so this is not Firefox 3 (could be Firefox 2, Netscape, SeaMonkey, etc).
+		// Password Manager code
+
+		var passwordManager = Components.classes["@mozilla.org/passwordmanager;1"].createInstance();
+		if (passwordManager) {
+			passwordManager = passwordManager.QueryInterface(Components.interfaces.nsIPasswordManager);
+				
+			try{
+				passwordManager.addUser("chrome://yacybar/", username, password);
+			} catch (e) { 
+				alert(e);
+			}
 		}
+	} else if ("@mozilla.org/login-manager;1" in Components.classes) {
+		// Login Manager exists so this is Firefox 3
+		// Login Manager code
+		var passwordManager = Components.classes["@mozilla.org/login-manager;1"]
+				.getService(Components.interfaces.nsILoginManager);
+		var nsLoginInfo = new Components.Constructor("@mozilla.org/login-manager/loginInfo;1",
+				Components.interfaces.nsILoginInfo, "init");
+
+		var authLoginInfo = new nsLoginInfo('chrome://yacybar/',
+				null, 'chrome://yacybar/',
+				username, password, "", "");
+		passwordManager.addLogin(authLoginInfo);
 	}
 }
 
 function removeUser(username) {
-	var passwordManager = Components.classes["@mozilla.org/passwordmanager;1"].createInstance();
-	if (passwordManager) {
-		passwordManager = passwordManager.QueryInterface(Components.interfaces.nsIPasswordManager);
-		
-		try {
-			passwordManager.removeUser("chrome://yacybar/", username);
-		} catch (e) {
-			alert(e);
+	if ("@mozilla.org/passwordmanager;1" in Components.classes) {
+		// Password Manager exists so this is not Firefox 3 (could be Firefox 2, Netscape, SeaMonkey, etc).
+		// Password Manager code
+		var passwordManager = Components.classes["@mozilla.org/passwordmanager;1"].createInstance();
+		if (passwordManager) {
+			passwordManager = passwordManager.QueryInterface(Components.interfaces.nsIPasswordManager);
+			
+			try {
+				passwordManager.removeUser("chrome://yacybar/", username);
+			} catch (e) {
+				alert(e);
+			}
 		}
+	} else if ("@mozilla.org/login-manager;1" in Components.classes) {
+		// Login Manager exists so this is Firefox 3
+		// Login Manager code
+		var passwordManager = Components.classes["@mozilla.org/login-manager;1"]
+				.getService(Components.interfaces.nsILoginManager);
+		 
+		// Find users for this extension 
+		var logins = passwordManager.findLogins({}, "chrome://yacybar/", null, "chrome://yacybar/");
+
+		for (var i = 0; i < logins.length; i++) {
+			if (logins[i].username == username) {
+				passwordManager.removeLogin(logins[i]);
+				break;
+			}
+		}
+
 	}
 }
 
